# Image-Filtering

work/: CMakeLists.txt  Cgra352Assignment1.sln  Cgra352Assignment1.vcxproj  Cgra352Assignment1.vcxproj.filters
work/Debug/Cgra352A.B7DED6CE.tlog/: Cgra352Assignment1.lastbuildstate
work/cmake/: CGRAFunctions.cmake
work/src/: CMakeLists.txt  invert.cpp  invert.hpp  main.cpp
work/x64/Debug/: Cgra352Assignment1.exe.recipe  Cgra352Assignment1.vcxproj.FileListAbsolute.txt  main.obj.enc  vc142.idb
work/x64/Debug/Cgra352A.B7DED6CE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cgra352Assignment1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
